--- a/addons/l10n_tr_nilvera_einvoice/i18n/l10n_tr_nilvera_einvoice.pot
+++ b/addons/l10n_tr_nilvera_einvoice/i18n/l10n_tr_nilvera_einvoice.pot
@@ -4,10 +4,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 17.0+e\n"
+"Project-Id-Version: Odoo Server 18.0+e\n"
+"Project-Id-Version: Odoo Server 18.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-16 12:38+0000\n"
-"PO-Revision-Date: 2025-07-16 12:38+0000\n"
+"POT-Creation-Date: 2025-08-31 20:11+0000\n"
+"PO-Revision-Date: 2025-08-31 20:11+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -16,29 +17,75 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aboneno
+msgid "ABONENO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aracikurumetiket
+msgid "ARACIKURUMETIKET"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aracikurumvkn
+msgid "ARACIKURUMVKN"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model,name:l10n_tr_nilvera_einvoice.model_account_move_send
 msgid "Account Move Send"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_bayino
+msgid "BAYINO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ciftcino
+msgid "CIFTCINO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Check data on Invoice(s)"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Check data on Partner(s)"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Check reference on Partner(s)"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid "Check tags on company(s)"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_distributorno
+msgid "DISTRIBUTORNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_dosyano
+msgid "DOSYANO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_epdkno
+msgid "EPDKNO"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
@@ -52,8 +99,18 @@ msgid "Fetch Nilvera invoice status"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
-#: model_terms:ir.ui.view,arch_db:l10n_tr_nilvera_einvoice.account_journal_dashboard_kanban_view
-msgid "Fetch from Nilvera"
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_hastano
+msgid "HASTANO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_hizmetno
+msgid "HIZMETNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_imalatcino
+msgid "IMALATCINO"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
@@ -67,13 +124,13 @@ msgid "Journal Entry"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
-#: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__l10n_tr_nilvera_einvoice_enable_xml
-msgid "L10N Tr Nilvera Einvoice Enable Xml"
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_mersisno
+msgid "MERSISNO"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
-#: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__l10n_tr_nilvera_warnings
-msgid "L10N Tr Nilvera Warnings"
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_musterino
+msgid "MUSTERINO"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
@@ -81,6 +138,11 @@ msgstr ""
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move__l10n_tr_nilvera_uuid
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_payment__l10n_tr_nilvera_uuid
 msgid "Nilvera Document UUID"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model_terms:ir.ui.view,arch_db:l10n_tr_nilvera_einvoice.account_journal_dashboard_kanban_view
+msgid "Sync Nilvera Invoices"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
@@ -123,6 +185,36 @@ msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__l10n_tr_nilvera_einvoice_checkbox_xml
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_pasaportno
+msgid "PASAPORTNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:ir.model,name:l10n_tr_nilvera_einvoice.model_res_partner_category
+msgid "Partner Tags"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid ""
+"Please ensure that your company contact has either the 'MERSISNO' or "
+"'TICARETSICILNO' tag with a value assigned."
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_sayacno
+msgid "SAYACNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_subeno
+msgid "SUBENO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Send E-Invoice to Nilvera"
 msgstr ""
 
@@ -144,9 +236,36 @@ msgid "Successful"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_tapdkno
+msgid "TAPDKNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_telefonno
+msgid "TELEFONNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_tesisatno
+msgid "TESISATNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ticaretsicilno
+msgid "TICARETSICILNO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/res_partner_category.py:0
+msgid ""
+"The Contact Tag(s) cannot be deleted because it is used in Türkiye "
+"electronic integrations."
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
 msgid ""
 "The following E-Invoice partner(s) must have the reference field set to the "
 "tax office name."
@@ -155,7 +274,6 @@ msgstr ""
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
 msgid ""
 "The following invoice(s) need to have the same Start Date and End Date on "
 "all their respective Invoice Lines."
@@ -164,7 +282,6 @@ msgstr ""
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
 msgid ""
 "The following partner(s) are either not Turkish or are missing one of the "
 "following fields: city, state, or street."
@@ -213,6 +330,11 @@ msgid "UBL-TR 1.2"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ureticino
+msgid "URETICINO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,help:l10n_tr_nilvera_einvoice.field_account_bank_statement_line__l10n_tr_nilvera_uuid
 #: model:ir.model.fields,help:l10n_tr_nilvera_einvoice.field_account_move__l10n_tr_nilvera_uuid
 #: model:ir.model.fields,help:l10n_tr_nilvera_einvoice.field_account_payment__l10n_tr_nilvera_uuid
@@ -227,16 +349,18 @@ msgstr ""
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid "View Company(s)"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
 msgid "View Invoice(s)"
 msgstr ""
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
 msgid "View Partner(s)"
 msgstr ""
 
