--- a/addons/l10n_tr_nilvera_einvoice/i18n/tr.po
+++ b/addons/l10n_tr_nilvera_einvoice/i18n/tr.po
@@ -4,10 +4,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 17.0+e\n"
+"Project-Id-Version: Odoo Server 18.0+e\n"
+"Project-Id-Version: Odoo Server 18.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-16 12:39+0000\n"
-"PO-Revision-Date: 2025-07-16 12:39+0000\n"
+"POT-Creation-Date: 2025-08-31 20:13+0000\n"
+"PO-Revision-Date: 2025-08-31 20:13+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -16,30 +17,76 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aboneno
+msgid "ABONENO"
+msgstr "ABONENO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aracikurumetiket
+msgid "ARACIKURUMETIKET"
+msgstr "ARACIKURUMETIKET"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_aracikurumvkn
+msgid "ARACIKURUMVKN"
+msgstr "ARACIKURUMVKN"
+
+#. module: l10n_tr_nilvera_einvoice
 #: model:ir.model,name:l10n_tr_nilvera_einvoice.model_account_move_send
 msgid "Account Move Send"
 msgstr "Hesap Hareketi Yollandı"
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_bayino
+msgid "BAYINO"
+msgstr "BAYINO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ciftcino
+msgid "CIFTCINO"
+msgstr "CIFTCINO"
+
+#. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Check data on Invoice(s)"
 msgstr "Fatura(lar)daki Verileri Kontrol Edin"
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Check data on Partner(s)"
 msgstr "Ortak(lar) hakkındaki verileri kontrol edin"
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Check reference on Partner(s)"
 msgstr "Ortak(lar) üzerindeki referansı kontrol edin"
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid "Check tags on company(s)"
+msgstr "Şirket(ler) üzerindeki etiketleri kontrol edin"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_distributorno
+msgid "DISTRIBUTORNO"
+msgstr "DISTRIBUTORNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_dosyano
+msgid "DOSYANO"
+msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_epdkno
+msgid "EPDKNO"
+msgstr "EPDKNO"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields.selection,name:l10n_tr_nilvera_einvoice.selection__account_move__l10n_tr_nilvera_send_status__error
@@ -52,9 +99,19 @@ msgid "Fetch Nilvera invoice status"
 msgstr "Nilvera fatura durumunu getir"
 
 #. module: l10n_tr_nilvera_einvoice
-#: model_terms:ir.ui.view,arch_db:l10n_tr_nilvera_einvoice.account_journal_dashboard_kanban_view
-msgid "Fetch from Nilvera"
-msgstr "Nilvera'dan Getir"
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_hastano
+msgid "HASTANO"
+msgstr "HASTANO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_hizmetno
+msgid "HIZMETNO"
+msgstr "HIZMETNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_imalatcino
+msgid "IMALATCINO"
+msgstr "IMALATCINO"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model,name:l10n_tr_nilvera_einvoice.model_account_journal
@@ -67,14 +124,14 @@ msgid "Journal Entry"
 msgstr "Yevmiye Kaydı"
 
 #. module: l10n_tr_nilvera_einvoice
-#: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__l10n_tr_nilvera_einvoice_enable_xml
-msgid "L10N Tr Nilvera Einvoice Enable Xml"
-msgstr "L10N Tr Nilvera Einvoice Etkinleştir Xml"
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_mersisno
+msgid "MERSISNO"
+msgstr "MERSISNO"
 
 #. module: l10n_tr_nilvera_einvoice
-#: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__l10n_tr_nilvera_warnings
-msgid "L10N Tr Nilvera Warnings"
-msgstr "L10N Tr Nilvera Uyarıları"
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_musterino
+msgid "MUSTERINO"
+msgstr "MUSTERINO"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_bank_statement_line__l10n_tr_nilvera_uuid
@@ -82,6 +139,11 @@ msgstr "L10N Tr Nilvera Uyarıları"
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_payment__l10n_tr_nilvera_uuid
 msgid "Nilvera Document UUID"
 msgstr "Nilvera Belge UUID'si"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model_terms:ir.ui.view,arch_db:l10n_tr_nilvera_einvoice.account_journal_dashboard_kanban_view
+msgid "Sync Nilvera Invoices"
+msgstr "Nilvera Faturalarını Senkronize Et"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_bank_statement_line__l10n_tr_nilvera_send_status
@@ -124,7 +186,37 @@ msgstr ""
 "başka bir API anahtarı deneyin veya Nilvera ile iletişime geçin."
 
 #. module: l10n_tr_nilvera_einvoice
-#: model:ir.model.fields,field_description:l10n_tr_nilvera_einvoice.field_account_move_send__l10n_tr_nilvera_einvoice_checkbox_xml
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_pasaportno
+msgid "PASAPORTNO"
+msgstr "PASAPORTNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:ir.model,name:l10n_tr_nilvera_einvoice.model_res_partner_category
+msgid "Partner Tags"
+msgstr "Ortak Etiketleri"
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid ""
+"Please ensure that your company contact has either the 'MERSISNO' or "
+"''TICARETSICILNO' tag with a value assigned."
+msgstr "Lütfen şirket kontaktınızda 'MERSISNO' veya "
+"'TICARETSICILNO' etiketinin değerle birlikte ekli olduğundan emin olun."
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_sayacno
+msgid "SAYACNO"
+msgstr "SAYACNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_subeno
+msgid "SUBENO"
+msgstr "SUBENO"
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid "Send E-Invoice to Nilvera"
 msgstr "Nilvera'ya E-Fatura Gönderin"
 
@@ -146,20 +238,50 @@ msgid "Successful"
 msgstr "Başarılı"
 
 #. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_tapdkno
+msgid "TAPDKNO"
+msgstr "TAPDKNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_telefonno
+msgid "TELEFONNO"
+msgstr "TELEFONNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_tesisatno
+msgid "TESISATNO"
+msgstr "TESISATNO"
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ticaretsicilno
+msgid "TICARETSICILNO"
+msgstr "TICARETSICILNO"
+
+#. module: l10n_tr_nilvera_einvoice
 #. odoo-python
-#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/res_partner_category.py:0
 msgid ""
-"The following E-Invoice partner(s) must have the reference field set to the "
-"tax office name."
+"The Contact Tag(s) cannot be deleted because it is used in Türkiye "
+"electronic integrations."
 msgstr ""
-"Aşağıdaki E-Fatura ortaklarının referans alanı vergi dairesi adına ayarlanmış "
-"olmalıdır."
+"Kontak Etiket(ler)i silinemez çünkü Türkiye e-entegrasyonlarında "
+"kullanılmaktadır."
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid ""
+"The following E-Invoice partner(s) must have the reference field set to the "
+"tax office name."
+msgstr ""
+"Aşağıdaki E-Fatura ortaklarının referans alanı vergi dairesi adına "
+"ayarlanmış olmalıdır."
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid ""
 "The following invoice(s) need to have the same Start Date and End Date on "
 "all their respective Invoice Lines."
@@ -170,13 +292,13 @@ msgstr ""
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
+#: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 msgid ""
-"The following partner(s) are either not Turkish or are missing one of the "
-"following fields: city, state, or street."
+"The following partner(s) are either not Turkish or are missing one of those "
+"fields: city, state and street."
 msgstr ""
-"Aşağıdaki ortak(lar) ya Türkçe değildir ya da bu alanlardan biri eksiktir: "
-"şehir, eyalet ve cadde."
+"Aşağıdaki ortaklar ya Türk değil ya da şu alanlardan bir veya daha fazlası "
+"eksik: şehir, eyalet veya sokak."
 
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
@@ -214,13 +336,18 @@ msgid ""
 "To continue sending e-Invoices to Nilvera, please upgrade the 'Türkiye - "
 "Nilvera E-Invoice' module."
 msgstr ""
-"Nilvera’ya e-Fatura göndermeye devam etmek için için lütfen "
-"'Türkiye - Nilvera E-Invoice' modülünü güncelleyin."
+"Nilvera’ya e-Fatura göndermeye devam etmek için için lütfen 'Türkiye - "
+"Nilvera E-Invoice' modülünü güncelleyin."
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model,name:l10n_tr_nilvera_einvoice.model_account_edi_xml_ubl_tr
 msgid "UBL-TR 1.2"
 msgstr ""
+
+#. module: l10n_tr_nilvera_einvoice
+#: model:res.partner.category,name:l10n_tr_nilvera_einvoice.res_partner_category_ureticino
+msgid "URETICINO"
+msgstr "URETICINO"
 
 #. module: l10n_tr_nilvera_einvoice
 #: model:ir.model.fields,help:l10n_tr_nilvera_einvoice.field_account_bank_statement_line__l10n_tr_nilvera_uuid
@@ -237,8 +364,12 @@ msgstr "Bilinmiyor"
 #. module: l10n_tr_nilvera_einvoice
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
+msgid "View Company(s)"
+msgstr "Şirket(ler)i Görüntüle"
+
+#. module: l10n_tr_nilvera_einvoice
+#. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
 msgid "View Invoice(s)"
 msgstr "Fatura(ları) Görüntüle"
 
@@ -246,7 +377,6 @@ msgstr "Fatura(ları) Görüntüle"
 #. odoo-python
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
 #: code:addons/l10n_tr_nilvera_einvoice/models/account_move_send.py:0
-#, python-format
 msgid "View Partner(s)"
 msgstr "Ortak(lar)ı Görüntüle"
 
