[FIX] l10n_{latam_base,ar} : add missing translations
Step to reproduce:
- install `l10n_ar`, `website_sale` and `payment_demo`
- Add a language e.g.: spanish (AR)
- switch to `(AR) Responsable Inscripto` and create a website for this company
- change default company for "marc demo" user to `(AR) Responsable Inscripto`
- login with "marc demo" , go to shop page, and change site language to sapnish
- add a product e.g, three set sofa to cart and goto checkout page
- proceed and you will be directed to "Address management page"

Observation:
"Identification Type " and "AFIP Responsibility" are not translated

Cause:
After this commit [1], module l10n_ar_website_sale was dropped and address logic
was mooved to l10n_ar and l10n_latam_base
but the following pot files were not updated, this caused missing of tranlation
in following modules

[1] https://github.com/odoo/odoo/commit/5a93da8e9220ecbf664b26445b04717a9245ef5e

Fix:
Add missing translations in respective po and pot files

opw-5000512

--- a/addons/l10n_ar/i18n/es_419.po
+++ b/addons/l10n_ar/i18n/es_419.po
@@ -58,6 +58,26 @@ msgid "- CUIT:"
 msgstr "- CUIT:"
 
 #. module: l10n_ar
+#: model_terms:ir.ui.view,arch_db:l10n_ar.address_form_fields
+msgid "<option value=\"\">AFIP Responsibility...</option>"
+msgstr "<option value=\"\">Responsabilidad AFIP...</option>"
+
+#. module: l10n_ar
+#: model_terms:ir.ui.view,arch_db:l10n_ar.address_form_fields
+msgid "AFIP Responsibility"
+msgstr "Responsabilidad AFIP"
+
+#. module: l10n_ar
+#: model_terms:ir.ui.view,arch_db:l10n_ar.address_form_fields
+msgid ""
+"Changing AFIP Responsibility type is not allowed once document(s) have "
+"been issued for your account. Please contact us "
+"directly for this operation."
+msgstr ""
+"No puede cambiar el tipo de responsabilidad AFIP después de que haya emitido"
+" documentos para su cuenta. Contáctenos para realizar esta operación."
+
+#. module: l10n_ar
 #: model:ir.model.fields.selection,name:l10n_ar.selection__account_tax_group__l10n_ar_tribute_afip_code__01
 msgid "01 - National Taxes"
 msgstr "01 - Impuestos nacionales"
