--- a/addons/l10n_ar/i18n/l10n_ar.pot
+++ b/addons/l10n_ar/i18n/l10n_ar.pot
@@ -147,6 +147,11 @@ msgid "<br/><strong>Source:</strong>"
 msgstr ""
 
 #. module: l10n_ar
+#: model_terms:ir.ui.view,arch_db:l10n_ar.address_form_fields
+msgid "<option value=\"\">AFIP Responsibility...</option>"
+msgstr ""
+
+#. module: l10n_ar
 #: model_terms:ir.ui.view,arch_db:l10n_ar.report_invoice_document
 msgid "<span>Amount</span>"
 msgstr ""
@@ -234,6 +239,11 @@ msgstr ""
 #. module: l10n_ar
 #: model:ir.model.fields,field_description:l10n_ar.field_account_journal__l10n_ar_afip_pos_system
 msgid "AFIP POS System"
+msgstr ""
+
+#. module: l10n_ar
+#: model_terms:ir.ui.view,arch_db:l10n_ar.address_form_fields
+msgid "AFIP Responsibility"
 msgstr ""
 
 #. module: l10n_ar
@@ -379,6 +389,14 @@ msgstr ""
 msgid ""
 "Can not create chart of account until you configure your company AFIP "
 "Responsibility and VAT."
+msgstr ""
+
+#. module: l10n_ar
+#: model_terms:ir.ui.view,arch_db:l10n_ar.address_form_fields
+msgid ""
+"Changing AFIP Responsibility type is not allowed once document(s) have "
+"been issued for your account. Please contact us "
+"directly for this operation."
 msgstr ""
 
 #. module: l10n_ar
