--- a/addons/l10n_latam_base/i18n/es_419.po
+++ b/addons/l10n_latam_base/i18n/es_419.po
@@ -91,6 +91,7 @@ msgstr "Número de identificación para el tipo seleccionado"
 #: model:ir.model.fields,field_description:l10n_latam_base.field_res_partner__l10n_latam_identification_type_id
 #: model:ir.model.fields,field_description:l10n_latam_base.field_res_users__l10n_latam_identification_type_id
 #: model:ir.ui.menu,name:l10n_latam_base.menu_l10n_latam_identification_type
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
 msgid "Identification Type"
 msgstr "Tipo de Identificación"
 
@@ -98,6 +99,21 @@ msgstr "Tipo de Identificación"
 #: model:ir.model,name:l10n_latam_base.model_l10n_latam_identification_type
 msgid "Identification Types"
 msgstr "Tipos de identificación"
+
+#. module: l10n_latam_base
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
+msgid "<option value=\"\">Identification Type...</option>"
+msgstr "<option value=\"\">Tipo de identificación...</option>"
+
+#. module: l10n_latam_base
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
+msgid ""
+"Changing Identification type is not allowed once document(s) have been "
+"issued for your account. Please contact us directly "
+"for this operation."
+msgstr ""
+"No puede cambiar el tipo de identificación después de que haya emitido "
+"documentos para su cuenta. Contáctenos para realizar esta operación."
 
 #. module: l10n_latam_base
 #: model:ir.model.fields,field_description:l10n_latam_base.field_l10n_latam_identification_type__is_vat
