--- a/addons/l10n_latam_base/i18n/pt_BR.po
+++ b/addons/l10n_latam_base/i18n/pt_BR.po
@@ -89,6 +89,7 @@ msgstr "Número de identificação do tipo selecionado"
 #: model:ir.model.fields,field_description:l10n_latam_base.field_res_partner__l10n_latam_identification_type_id
 #: model:ir.model.fields,field_description:l10n_latam_base.field_res_users__l10n_latam_identification_type_id
 #: model:ir.ui.menu,name:l10n_latam_base.menu_l10n_latam_identification_type
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
 msgid "Identification Type"
 msgstr "Tipo de identificação"
 
@@ -96,6 +97,22 @@ msgstr "Tipo de identificação"
 #: model:ir.model,name:l10n_latam_base.model_l10n_latam_identification_type
 msgid "Identification Types"
 msgstr "Tipos de identificação"
+
+#. module: l10n_latam_base
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
+msgid "<option value=\"\">Identification Type...</option>"
+msgstr "<option value=\"\">Tipo de identificação...</option>"
+
+#. module: l10n_latam_base
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
+msgid ""
+"Changing Identification type is not allowed once document(s) have been "
+"issued for your account. Please contact us directly "
+"for this operation."
+msgstr ""
+"Não é permitido alterar o tipo de identificação depois que o(s) documento(s) "
+"tiver(em) sido emitido(s) para sua conta. Entre em contato conosco "
+"diretamente para essa operação."
 
 #. module: l10n_latam_base
 #: model:ir.model.fields,field_description:l10n_latam_base.field_l10n_latam_identification_type__is_vat
