--- a/addons/l10n_latam_base/i18n/l10n_latam_base.pot
+++ b/addons/l10n_latam_base/i18n/l10n_latam_base.pot
@@ -16,6 +16,11 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: l10n_latam_base
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
+msgid "<option value=\"\">Identification Type...</option>"
+msgstr ""
+
+#. module: l10n_latam_base
 #: model_terms:ir.ui.view,arch_db:l10n_latam_base.view_partner_latam_form
 msgid "<span class=\"oe_read_only\"> - </span>"
 msgstr ""
@@ -29,6 +34,14 @@ msgstr ""
 #. module: l10n_latam_base
 #: model_terms:ir.ui.view,arch_db:l10n_latam_base.view_l10n_latam_identification_type_search
 msgid "Archived"
+msgstr ""
+
+#. module: l10n_latam_base
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
+msgid ""
+"Changing Identification type is not allowed once document(s) have been "
+"issued for your account. Please contact us directly "
+"for this operation."
 msgstr ""
 
 #. module: l10n_latam_base
@@ -91,6 +104,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:l10n_latam_base.field_res_partner__l10n_latam_identification_type_id
 #: model:ir.model.fields,field_description:l10n_latam_base.field_res_users__l10n_latam_identification_type_id
 #: model:ir.ui.menu,name:l10n_latam_base.menu_l10n_latam_identification_type
+#: model_terms:ir.ui.view,arch_db:l10n_latam_base.address_form_fields
 msgid "Identification Type"
 msgstr ""
 
